PR fortran/9972 	* toplev.c (rest_of_handle_inlining): Also consider functions 	for deferral if the language is GNU F77.
testsuite:
	* 980520-1.x: Removed.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75692 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-11  Steven Bosscher  <stevenb@suse.de>
+
+	* toplev.c (rest_of_handle_inline): Also consider functions
+	for deferral if the language is GNU F77.
+
 2004-01-11  Zack Weinberg  <zack@codesourcery.com>
 
 	* c-decl.c (diagnose_arglist_conflict): Add missing space to
