--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-11  Paul Brook  <paul@codesourcery.com>
+
+	* trans-stmt.c (gfc_trans_if_1): New function.
+	(gfc_trans_if): Use it.
+
 2004-01-11  Erik Schnetter  <schnetter@uni-tuebingen.de>
 
 	* gfortran.h (GFC_MAX_SYMBOL_LEN): Increase.
