* pa.c: Don't include obstack.h. 	* pa.md: Correct constraint in pattern for loading PIC label address.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75702 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-11  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* pa.c: Don't include obstack.h.
+
+	* pa.md: Correct constraint in pattern for loading PIC label address.
+
 2004-01-11  Kaz Kojima  <kkojima@gcc.gnu.org>
 
 	* config/sh/linux.h (ASM_PREFERRED_EH_DATA_FORMAT): Undefine
