--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2004-01-12  Matthias Klose  <doko@debian.org>
+
+	Backport from mainline
+
+	2004-01-11  Richard Henderson  <rth@redhat.com>
+	PR opt/12441
+	Revert: Sat Mar 30 14:08:55 CET 2002  Jan Hubicka  <jh@suse.cz>
+	* i386.c (aligned_operand): Be prepared for SUBREGed registers.
+	(ix86_decompose_address): Use REG_P instead of GET_CODE (...) == REG.
+	(ix86_address_cost): Be prepared for SUBREGed registers.
+	(legitimate_address_p): Accept SUBREGed registers.
+
 2004-01-11  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.c (alpha_encode_section_info): Use 'I'
