--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-12  Richard Sandiford  <rsandifo@redhat.com>
+
+	* combine.c (combine_simplify_rtx): Don't pass VOIDmode to
+	simplify_unary_operation if the operand has a known mode.
+
 2004-01-12  Hartmut Penner  <hpenner@de.ibm.com>
 
 	* gcc/config/rs6000/rs6000.c (word_offset_memref_operand): New
