Partial fox for PR opt/10776 II 	* cselib.c: Include params.h 	(cselib_invalidate_mem):  Limit amount of nonconflicting memory 	locations. 	* params.def (PARAM_MAX_CSELIB_MEMORY_LOCATIONS): New. 	* Makefile.in (cselib.o): Depend on params.h
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75710 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -4859,6 +4859,11 @@ register.  Increasing values mean more aggressive optimization, making the
 compile time increase with probably slightly better performance.  The default
 value is 100.
 
+@item max-cselib-memory-location
+The maximum number of memory locations cselib should take into acount.
+Increasing values mean more aggressive optimization, making the compile time
+increase with probably slightly better performance.  The default value is 500.
+
 @item reorder-blocks-duplicate
 @itemx reorder-blocks-duplicate-feedback
 
