* misc.c: Remove trailing spaces. 	Update copyright notice missed in previous change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75716 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-12  Arnaud Charlet  <charlet@act-europe.fr>
 
+	* misc.c: Remove trailing spaces.
+	Update copyright notice missed in previous change.
+
 	PR ada/13572
 	* bld.adb (Recursive_Process): Reference prefix/share/gnat instead of
 	prefix/share/make
