--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-12  Jan Hubicka  <jh@suse.cz>
+
+	* pt.c (for_each_template_parm): Do not check for duplicates.
+	(for_each_template_parm): Use walk_tree duplicate checking code.
+
 2004-01-11  Ian Lance Taylor  <ian@wasabisystems.com>
 
 	PR c++/3478
