PR c++/4100 	* parser.c (cp_parser_decl_specifier_seq): Add check for a friend 	decl-specifier occurring along with a class definition.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75726 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-12  Scott Brumbaugh  <scottb.lists@verizon.net>
+
+	PR c++/4100
+	* parser.c (cp_parser_decl_specifier_seq): Add check for a friend
+	decl-specifier occurring along with a class definition.
+
 2004-01-12  Ian Lance Taylor  <ian@wasabisystems.com>
 
 	* parser.c (cp_parser_decl_specifier_seq): Add parenthetical
