2004-01-12  Gernot Hillier  <gernot.hillier@siemens.com>
	* configure.in: GLIBCXX->GLIBCPP.
	* configure: Regenerated.
	* aclocal.m4: Regenerated.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75728 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_3-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-12  Gernot Hillier  <gernot.hillier@siemens.com>
+
+	* configure.in: GLIBCXX->GLIBCPP.
+	* configure: Regenerated.
+	* aclocal.m4: Regenerated.
+
 2004-01-07  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* configure.in: Add io bits to linux cross config.
