--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2004-01-12  Jan Hubicka  <jh@suse.cz>
+
+	PR opt/12826
+	* loop.c (insert_loop_mem): Preffer VOLATILE memory references to be
+	stored.
+
+	PR opt/12863
+	* cfgcleanup.c (label_is_jump_target_p): Move to...
+	* rtlanal.c (label_is_jump_target_p): ... here.
+	* cfgrtl.c (cfg_layout_redirect_edge_and_branch):  Fix redirecting of fallthru
+	edges unified with branch edges.
+
 2004-01-12  Richard Earnshaw  <rearnsha@arm.com>
 
 	* simplify-rtx.c (simplify_immed_subreg): Correctly extract the
