PR middle-end/11397 	* varasm.c (assemble_alias): Remove weak aliases from weak_decls.
	* gcc.dg/special/wkali-2.c: Add dg-require-alias.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75737 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-12  Roger Sayle  <roger@eyesopen.com>
+
+	PR middle-end/11397
+	* varasm.c (assemble_alias): Remove weak aliases from weak_decls.
+
 2004-01-12  Jan Hubicka  <jh@suse.cz>
 
 	PR opt/12826
