--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-12  Geoffrey Keating  <geoffk@greed.local>
+
+	* real.c: Update copyright date.
+	* emit-rtl.c: Likewise.
+	* rtl.h: Likewise.
+	* dwarf2out.c: Likewise.
+	* config/rs6000/darwin-ldouble.c: Likewise.
+	* config/rs6000/rs6000.md: Likewise.
+
 2004-01-12  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.c (rs6000_init_libfuncs): Add AIX
