Correct my e-mail address
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75743 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,4 @@
-2004-01-12  Geoffrey Keating  <geoffk@greed.local>
+2004-01-12  Geoffrey Keating  <geoffk@apple.com>
 
 	* real.c: Update copyright date.
 	* emit-rtl.c: Likewise.
