--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-12  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	* MAINTAINERS: Add myself as a libiberty MAINTAINER.
+
 2004-01-10  Richard Sandiford  <rsandifo@redhat.com>
 
 	* MAINTAINERS: Add myself as a MIPS maintainer.
