--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-12  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/mips/mips.c (mips_symbolic_constant_p): Revert last patch.
+
 2004-01-12  Kazu Hirata  <kazu@cs.umass.edu>
 
 	PR optimization/12508.
