2004-01-12  Jonathan Merriman <jonm@dualitymedia.com>
        PR target/10847
        * config.gcc: No longer includes conflicting header sparc/sol2.h when
        building on sparc64-*-openbsd*.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75751 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-12  Jonathan Merriman <jonm@dualitymedia.com>
+
+	PR target/10847
+	* config.gcc: No longer includes conflicting header sparc/sol2.h when
+	building on sparc64-*-openbsd*.
+
 2004-01-12  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR debug/13539
