2004-01-12  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
        PR c++/13289
        * pt.c (instantiate_decl): Set DECL_TEMPLATE_INSTANTIATED before
        calling regenerate_decl_from_template.
2004-01-12  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

        PR c++/13289
        * g++.dg/template/instantiate6.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75752 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-12  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/13289
+	* pt.c (instantiate_decl): Set DECL_TEMPLATE_INSTANTIATED before
+	calling regenerate_decl_from_template.
+
 2004-01-12  Scott Brumbaugh  <scottb.lists@verizon.net>
 
 	PR c++/4100
