2004-01-12  Matthias Klose  <doko@debian.org>
        Backport from mainline

        2003-12-08 Stuart Hastings <stuart@apple.com>
        * config/i386/i386.md: Typo in split of fp-valued if_then_else.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75753 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-12  Matthias Klose  <doko@debian.org>
+
+        Backport from mainline
+
+        2003-12-08 Stuart Hastings <stuart@apple.com>
+        * config/i386/i386.md: Typo in split of fp-valued if_then_else.
+
 2004-01-12  Roger Sayle  <roger@eyesopen.com>
 
 	PR middle-end/11397
