--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-12  Mark Mitchell  <mark@codesourcery.com>
+
+	* class.c (layout_class_type): For non-POD class types, also copy
+	the DECL_SIZE and DECL_MODE of fields to the base class type.
+
 2004-01-12  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
 	PR c++/13289
