2004-01-12  Andreas Tobler  <a.tobler@schweiz.ch>
	* testsuite/lib/libffi-dg.exp: Set LD_LIBRARY_PATH_32 for
	Solaris.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75760 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-12  Andreas Tobler  <a.tobler@schweiz.ch>
+
+	* testsuite/lib/libffi-dg.exp: Set LD_LIBRARY_PATH_32 for
+	Solaris.
+
 2004-01-08  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* testsuite/libffi.call/ffitest.h (allocate_mmap): Cast MAP_FAILED
