* g++.dg/ext/lvalue1.C: No longer expected to fail. 	* g++.dg/warn/Wunused-2.C: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75761 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-12  Zack Weinberg  <zack@codesourcery.com>
+
+	* g++.dg/ext/lvalue1.C: No longer expected to fail.
+	* g++.dg/warn/Wunused-2.C: Likewise.
+
 2004-01-12  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
 	PR c++/13289
