--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-12  Andreas Tobler  <a.tobler@schweiz.ch>
+
+	* lib/libjava.exp: Add LD_LIBRARY_PATH_32/64 to get proper
+	path setting for Ssolaris 32/64-bit testing.
+	Reorganize LD_LIBRARY_PATH setting.
+
 2004-01-09  Andrew Haley  <aph@redhat.com>
 
 	* lib/libjava.exp (bytecompile_file): Log compile command.
