--- a/gcc-3_3-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_3-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-12  Marc Espie <espie@openbsd.org>
+
+	* src/Makefile.am (version.dep): backport from HEAD.
+	* src/Makefile.in: regen.
+
 2004-01-12  Gernot Hillier  <gernot.hillier@siemens.com>
 
 	* configure.in: GLIBCXX->GLIBCPP.
