PR c++/13474 	* pt.c (tsubst) <INTEGER_TYPE>: Remove obsolete array index tweaking.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75777 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-13  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/13474
+	* pt.c (tsubst) <INTEGER_TYPE>: Remove obsolete array index tweaking.
+
 2003-01-12  Steven Bosscher  <stevenb@suse.de>
 
 	PR c++/13558
