PR c++/13474 	* g++.dg/template/array3.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75778 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-13  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/13474
+	* g++.dg/template/array3.C: New test.
+
 2004-01-12  Zack Weinberg  <zack@codesourcery.com>
 
 	* g++.dg/ext/lvalue1.C: No longer expected to fail.
