* builtins.c (expand_builtin_expect_jump): Simplify logic. Handle 	conditional jumps that drop through to unconditional jumps or the 	end of the sequence.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75780 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-12  Roger Sayle  <roger@eyesopen.com>
+
+	* builtins.c (expand_builtin_expect_jump): Simplify logic. Handle
+	conditional jumps that drop through to unconditional jumps or the
+	end of the sequence.
+
 2004-01-13  Jan Hubicka  <jh@suse.cz>
 
 	* alias.c (new_alias_set): Construct the alias_set varray.
