* demangle.h: If ANSI_PROTOTYPES is defined, include <stddef.h>.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75783 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,5 +1,7 @@
 2004-01-12  Ian Lance Taylor  <ian@wasabisystems.com>
 
+	* demangle.h: If ANSI_PROTOTYPES is defined, include <stddef.h>.
+
 	* demangle.h (enum demangle_component_type): Define.
 	(struct demangle_operator_info): Declare.
 	(struct demangle_builtin_type_info): Declare.
