--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-12  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	* README: Remove.
+
 2004-01-07  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* com.h (ffecom_gfrt_basictype): Correct return type.
