Delete unused file. 	* unwind-libunwind.c: Delete.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75790 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-12  James E Wilson  <wilson@specifixinc.com>
+
+	* unwind-libunwind.c: Delete.
+
 2004-01-12  Zack Weinberg  <zack@codesourcery.com>
 
 	PR 13656
