Add missing PR number
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75791 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -204,6 +204,7 @@
 
 2004-01-11  Steven Bosscher  <stevenb@suse.de>
 
+	PR fortran/9972
 	* toplev.c (rest_of_handle_inline): Also consider functions
 	for deferral if the language is GNU F77.
 
