--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-13  Ben Elliston  <bje@wasabisystems.com>
+
+	* doc/rtl.texi (Vector Operations): Remove defunct vec_const item.
+
 2004-01-12  James E Wilson  <wilson@specifixinc.com>
 
 	* unwind-libunwind.c: Delete.
