* ada/acats/run_all.sh: Add more verbose output in acats.log 	when compiling tests.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75795 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-13  Arnaud Charlet  <charlet@act-europe.fr>
+
+	* ada/acats/run_all.sh: Add more verbose output in acats.log
+	when compiling tests.
+
 2004-01-12  Zack Weinberg  <zack@codesourcery.com>
 
 	PR 13656
