--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,33 @@
+2004-01-13  Ed Schonberg  <schonberg@gnat.com>
+
+	* exp_ch3.adb (Build_Assignment): Fix bug in handling of controlled
+	components that are initialized with aggregates.
+
+2004-01-13  Vincent Celier  <celier@gnat.com>
+
+	* gnatlink.adb (Process_Binder_File): To find directory of shared
+	libgcc, if "gcc-lib" is not a subdirectory, look for the last
+	subdirectory "lib" in the path of the shared libgnat or libgnarl.
+
+	* make.adb (Gnatmake): If GCC version is at least 3, link with
+	-shared-libgcc, when there is at least one shared library project.
+
+	* opt.ads (GCC_Version): New integer constant.
+
+	* adaint.c (get_gcc_version): New function.
+
+2004-01-13  Robert Dewar  <dewar@gnat.com>
+
+	* sem_dist.adb, sem_res.adb, sem_util.adb,
+	sprint.adb, 3zsocthi.adb, einfo.adb, cstand.adb,
+	exp_ch4.adb, exp_ch9.adb, exp_dist.adb: Minor reformatting
+
+2004-01-13  Thomas Quinot  <quinot@act-europe.fr>
+
+	* s-interr.adb, s-stache.adb, s-taenca.adb, g-regpat.adb,
+	g-spitbo.adb, 5itaprop.adb: Add missing 'constant' keywords in object
+	declarations.
+
 2004-01-12  Arnaud Charlet  <charlet@act-europe.fr>
 
 	* misc.c: Remove trailing spaces.
