* arm.c (thumb_legitimate_address_p): Only allow constant pool references from SImode. * arm.md (thumb_movhi_insn): Don't allow minipool references.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75804 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-13  Richard Earnshaw  <rearnsha@arm.com>
+
+	* arm.c (thumb_legitimate_address_p): Only allow constant pool 
+	references from SImode.
+	* arm.md (thumb_movhi_insn): Don't allow minipool references.
+
 2004-01-13  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* system.h (TEXT_SECTION): Poison.
