2004-01-13  Toon Moene  <toon@moene.indiv.nluug.nl>
	PR fortran/12912
	* lang-specs.h: Enable compilation of files ending
	in .f, .for and .FOR.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75807 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-13  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	PR fortran/12912
+	* lang-specs.h: Enable compilation of files ending
+	in .f, .for and .FOR.
+
 2004-01-11  Paul Brook  <paul@codesourcery.com>
 
 	* trans-stmt.c (gfc_trans_if_1): New function.
