--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-14  Jan Hubicka  <jh@suse.cz>
+
+	* lang.c (java_estimate_num_insns_1): Fix bug in MODIFY_EXPR cost
+	estimation.
+
 2004-01-09  Mark Mitchell  <mark@codesourcery.com>
 
 	* java-tree.h (java_expand_expr): Change prototype.
