Partial fix PR c++/12850 	* cgraphunit.c (cgraph_finalize_function): Always ggc_collect when 	at zero nest level.
	* decl2.c (mark_used): Do not proactively instantiate templates
	when compiling in unit-at-a-time or not optimizing.
	* optimize.c (maybe_clone_body): Do not increase function depth.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75823 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-14  Jan Hubicka  <jh@suse.cz>
+
+	Partial fix to PR c++/12850
+	* decl2.c (mark_used): Do not proactively instantiate templates
+	when compiling in unit-at-a-time or not optimizing.
+	* optimize.c (maybe_clone_body): Do not increase function depth.
+
 2004-01-13  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
 	PR c++/13474
